--- a/package.json
+++ b/package.json
@@ -6,9 +6,8 @@
   "scripts": {
     "start": "node server",
     "server": "node server",
-    "dev-server": "nodemon server",
     "client": "npm start --prefix client",
-    "dev": "concurrently \"npm run dev-server\" \"npm run client\"",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
     "heroku-postbuild": "npm install --prefix client && npm run build --prefix client"
   },
   "keywords": [],
